--- a/server/views/layouts/mainLayout.hbs
+++ b/server/views/layouts/mainLayout.hbs
@@ -10,17 +10,8 @@
     <link rel='stylesheet' href='/stylesheets/styles.css' />
   </head>
   <body>
-    <nav>
-      <div class="container">
-        <div class="nav-wrapper">
-          <a href="/" class="brand-logo">Proyecto Final 🎞</a>
-          <ul id="nav-mobile" class="right hide-on-mead-and-down" >
-            <li><a href="/">Inicio</a></li>
-            <li><a href="/about">Acerca de ...</a></li>
-          </ul>
-        </div>
-      </div>
-    </nav>
+    {{!-- Lllamando a la vista parcial de la navbar --}}
+    {{> _navbar}}
     <div class="container">
       {{{body}}}
     </div>
@@ -30,4 +21,3 @@
     <script src="/javascripts/bundle.js"></script>
   </body>
 </html>
-
