--- a/server/views/partials/_navbar.hbs
+++ b/server/views/partials/_navbar.hbs
@@ -1,11 +1,21 @@
-<nav>
-    <div class="container">
-        <div class="nav-wrapper">
-          <a href="/" class="brand-logo">Proyecto Final 🕶</a>
-          <ul id="nav-mobile" class="right hide-on-mead-and-down" >
-            <li><a href="/">Inicio</a></li>
-            <li><a href="/about">Acerca de ...</a></li>
-          </ul>
-        </div>
+<nav class="light-blue darken-4">
+  <div class="container">
+    <div class="nav-wrapper">
+      <a href="/" class="brand-logo">
+        Proyecto Final 🕶
+      </a>
+      <ul id="nav-mobile" class="right hide-on-med-and-down">
+        <li>
+          <a href="/">
+            Inicio
+          </a>
+        </li>
+        <li>
+          <a href="/about">
+            Acerca de...
+          </a>
+        </li>
+      </ul>
     </div>
+  </div>
 </nav>
