--- a/server/views/home/aboutView.hbs
+++ b/server/views/home/aboutView.hbs
@@ -1,18 +1,27 @@
 <p>
-  <span>
-    Author:
-  </span>
-  {{name}}
+    <span>
+        Descripcón:
+    </span>
+    {{description}}
 </p>
 <p>
-  <span>
-    Correspondencia electronica:
-  </span>
-  {{email}}
+    <span>
+        Version:
+    </span>
+    {{version}}
 </p>
 <p>
-  <span>
-    🐙 GIT:
-  </span>
-  {{url}}
+    <span>Author: </span> {{name}}
+</p>
+<p>
+    <span>
+        Correspondencia electronica: 
+    </span> 
+    {{email}}
+</p>
+<p>
+    <span> 
+        🗿: 
+    </span> 
+    <a href="{{url}}">Git</a>
 </p>
