--- a/server/views/layouts/mainLayout.hbs
+++ b/server/views/layouts/mainLayout.hbs
@@ -4,9 +4,11 @@
     <title>{{title}}</title>
     <!-- Favicon -->
     <link rel="shortcut icon" href="images/favicon.ico" type="image/x-icon">
+    <!-- Iconos de google -->
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <!-- Cargando Materializecss --->
     <link rel='stylesheet' href='/vendor/materializecss/css/materialize.min.css' />
-    <!-- Cargando Materializecss --->
+    <!-- Cargando etilos de la app --->
     <link rel='stylesheet' href='/stylesheets/styles.css' />
   </head>
   <body>
