--- a/server/views/partials/_navbar.hbs
+++ b/server/views/partials/_navbar.hbs
@@ -1,21 +1,19 @@
 <nav class="light-blue darken-4">
   <div class="container">
     <div class="nav-wrapper">
-      <a href="/" class="brand-logo">
-        Proyecto Final 🕶
+      <a href="/" class="brand-logo">Proyecto Final 🕶</a>
+      <ul id="nav-mobile" class="right hide-on-med-and-down" >
+        <li><a href="/">Inicio</a></li>
+        <li><a href="/about">Acerca de ...</a></li>
+      </ul>
+      <!-- Visualizacion de navegacion para moviles -->
+      <a href="#" data-target="slide-out" class="sidenav-trigger">
+      <i class="material-icons">menu</i>
       </a>
-      <ul id="nav-mobile" class="right hide-on-med-and-down">
-        <li>
-          <a href="/">
-            Inicio
-          </a>
-        </li>
-        <li>
-          <a href="/about">
-            Acerca de...
-          </a>
-        </li>
+      <ul id="slide-out" class="sidenav">
+        <li><a href="/">Inicio</a></li>
+        <li><a href="/about">Acerca de ...</a></li>
       </ul>
     </div>
   </div>
-</nav>
+</nav> 
