--- a/server/views/home/indexView.hbs
+++ b/server/views/home/indexView.hbs
@@ -1,17 +1,17 @@
 <br><br>
-<div class="row center light-blue lighten-4" style="padding: 2em; border-radius: 1em;">
-  <h1 class="header center teal-text">
-    Bienvenido a ProjNotes
-  </h1>
-  <div class="row center">
-    <h5 class="header col s12 light grey-text text-darken-3">
-      Una aplicación que te permitirá registrar
-      las ideas de proyectos que vengan a tu mente.
-    </h5>
-  </div>
-  <div class="row center">
-    <a href="#" 
-    class="btn-large waves-effect waves-light teal">
-    Registra una idea</a>
-  </div>
+<div class="row center light-blue lighten-4" style="padding:2em; border-radius: 1em;">
+    <h1 class="header center teal-text">
+        Bienvenido a Proyecto Final
+    </h1>
+    <div class="row center">
+        <h5 class="header col s12 light grey-text text_darken-3">
+            Una aplicación que te permitirá registrar las 
+            ideas de proyectos que vengan a tu mente.
+        </h5>
+    </div>
+    <div class="row center">
+        <a href="/projects/add" class="btn-large waves-effect waves-ligth teal">
+            Registra una idea
+        </a>
+    </div>
 </div>
