Control de Acceso

--- a/server/views/home/aboutView.hbs
+++ b/server/views/home/aboutView.hbs
@@ -1,27 +1,30 @@
-<p>
-    <span>
-        Descripcón:
-    </span>
-    {{description}}
-</p>
-<p>
-    <span>
-        Version:
-    </span>
-    {{version}}
-</p>
-<p>
-    <span>Author: </span> {{name}}
-</p>
-<p>
-    <span>
-        Correspondencia electronica: 
-    </span> 
-    {{email}}
-</p>
-<p>
-    <span> 
-        🗿: 
-    </span> 
-    <a href="{{url}}">Git</a>
-</p>
+     <div class="col s12 m8 offset-m2 l6 offset-l3">
+        <div class="card-panel grey lighten-5 z-depth-1">
+          <div class="row valign-wrapper">
+            <div class="col s2">
+              <img src="images/L.jpg" alt="" class="circle responsive-img"> <!-- notice the "circle" class -->
+            </div>
+            <div class="col s10">
+                <span class="card-title" style="font-weight:700;font-size:medium; color:rgb(101, 100, 100)">{{cargo}}
+                <p class="black-text">{{name}} <br/>
+                  Contacto: {{email}}</p>
+              </span>
+            </div>
+          </div>
+        </div>
+      </div>
+           <div class="col s12 m8 offset-m2 l6 offset-l3">
+        <div class="card-panel grey lighten-5 z-depth-1">
+          <div class="row valign-wrapper">
+            <div class="col s2">
+              <img src="images/R.jpg" alt="" class="circle responsive-img"> <!-- notice the "circle" class -->
+            </div>
+            <div class="col s10">
+                <span class="card-title" style="font-weight:700;font-size:medium; color:rgb(101, 100, 100)">{{cargo1}}
+                <p class="black-text">{{name1}} <br/>
+                  Contacto: {{email1}}</p>
+              </span>
+            </div>
+          </div>
+        </div>
+      </div>
