--- a/server/views/home/indexView.hbs
+++ b/server/views/home/indexView.hbs
@@ -1,17 +1,13 @@
 <br><br>
-<div class="row center light-blue lighten-4" style="padding:2em; border-radius: 1em;">
-    <h1 class="header center teal-text">
-        Bienvenido a Proyecto Final
+<div class="row center  lighten-4" style="padding:2em; border-radius: 1em;">
+    <h1 class="header center teal-text" style="text-shadow: gray 5px 0 ;">
+        Sistema de Control de Acceso
     </h1>
     <div class="row center">
         <h5 class="header col s12 light grey-text text_darken-3">
-            Una aplicación que te permitirá registrar las 
-            ideas de proyectos que vengan a tu mente.
+            Una aplicación que te permitirá registrar las entradas y salidas
+            de cada uno de los usuarios que se encuentren registrados.
         </h5>
-    </div>
-    <div class="row center">
-        <a href="/projects/add" class="btn-large waves-effect waves-ligth teal">
-            Registra una idea
-        </a>
+        <img src="images/Control_Acceso_P.jpg" alt="">
     </div>
 </div>
