--- a/server/views/partials/_operations.hbs
+++ b/server/views/partials/_operations.hbs
@@ -1,9 +1,9 @@
 <li>
-    <a href="/projects">
+    <a href="/projects/">
         <i class="large material-icons" style="margin: 2px;">
             list
         </i>
-        Listar Proyectos
+        Listado Usuarios
     </a>
 </li>
 <li class="divider"></li>
@@ -12,6 +12,6 @@
         <i class="large material-icons" style="margin: 2px;">
             add_box
         </i>
-        Registrar Idea
+        Registrar Usuarios
     </a>
 </li>
